tests/positive/basic/array_set_string/input.ci
void main() {
    string[] xs = ["red", "green"];
    arraySet(xs, 1, "blue");
    print(xs[0] + "," + xs[1] + "\n");
}
