tests/negative/runtime/arrayset_out_of_bounds/input.ci
void main() {
    int[] xs = [1];
    arraySet(xs, 1, 9);
}
